Fix the jumping scrollbar issue

--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -10,6 +10,7 @@ img {
 
 html {
   background-color: #F2F2F2;
+  overflow-y: scroll;   /* Fix "jumping scrollbar" */
 }
 
 body {
